--- a/finalproject555Filters1.html
+++ b/finalproject555Filters1.html
@@ -1,7 +1,10 @@
 <!DOCTYPE html>
 <html>
+	<head>
+		<title>NGA Library Filters</title>
+		<meta charset="UTF-8">
+	</head>
 	<body>
-
 <h2>Filters</h2>
 	<h3> In general</h3>
 	<p>
